--- a/app/jade/parts/layout.jade
+++ b/app/jade/parts/layout.jade
@@ -6,4 +6,5 @@ html
 		link(rel="stylesheet", href="/components/bootstrap/dist/css/bootstrap.min.css")
 		link(rel="stylesheet", href="/css/style.css")
 	body
+		include ./header.jade
 		block main
