--- a/app/jade/parts/header.jade
+++ b/app/jade/parts/header.jade
@@ -1,2 +1,11 @@
-head
-	title aaa
+nav.navbar
+    .navbar-header
+        button.navbar-toggle.collapsed(data-toggle="collapse" data-target="#bs-navbar-collapse-1")
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+        a.navbar-brand(href="#"): img(src="/images/logo.png")
+    .collapse.navbar-collapse#bs-navbar-collapse-1
+        ul.nav.navbar-nav
+            li: a(href="#") Игрушки
+            li: a(href="#") Коляски
